--- a/src/BlogBundle/Resources/views/Blog/post.html.twig
+++ b/src/BlogBundle/Resources/views/Blog/post.html.twig
@@ -3,9 +3,11 @@
 
 {% block blog_main %}
 
+    {{ include("BlogBundle:Blog:menu.html.twig") }}
+
     <div id="post-show">
         <h3>{{ post.title }}</h3>
-        <p>{{ post.content }}</p>
+        <p>{{ post.content|nl2br }}</p>
         <p>{{ post.date|date('d/m/y') }}</p>
     </div>
 
