--- a/src/BlogBundle/Resources/views/Blog/index.html.twig
+++ b/src/BlogBundle/Resources/views/Blog/index.html.twig
@@ -11,15 +11,20 @@
 
         <div class="l-posts-content posts-content col-md-9">
             {% for post in posts %}
-                <div class="post">
+                <article class="post">
                     <a class="post-preview-title" href="{{ path('blog_post', {'id' : post.id}) }}">{{ post.title }}</a>
-                    <p class="post-preview-date">{{ post.date|localizeddate('long', 'none', 'fr_FR') }}</p>
+                    <p class="post-preview-date">
+                        <img class="img-clock" src="{{ asset('assets/images/clock.png') }}" alt="image clock" width="13">{{ post.date|localizeddate('long', 'none', 'fr_FR') }}
+                    </p>
                     <span class="hr"></span>
                     <p class="post-preview-content">{{ post.content|truncate(200, true) }}</p>
-                </div>
+                </article>
             {% endfor %}
         </div>
 
+        <div class="pagination-div">
+            {{ include("BlogBundle:Blog:pagination.html.twig") }}
+        </div>
 
     </div>
 
