--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -55,19 +55,19 @@ img.bg-img-texture {
 .admin-access {
     height: 50px;
     width: 50px;
-    position: absolute;
+    position: fixed;
     bottom: 0px;
     right: 0px;
 }
 
 .admin-access a {
-    position: absolute;
+    position: fixed;
     bottom: 0px;
     right: 0px;
     display: none;
 }
 
-/** INDEX CV **/
+/** LAYOUT INDEX CV **/
 
 .l-header-cv {
     width: 800px;
@@ -101,7 +101,7 @@ img.bg-img-texture {
     margin-bottom: 15px;
 }
 
-/** MENU BLOG **/
+/** LAYOUT MENU BLOG **/
 
 .l-menu-blog {
     background-color: rgba(30, 30, 30, 1);
@@ -123,10 +123,15 @@ img.bg-img-texture {
     font-size: 25px;
     background-color: rgb(20,20,20);
     font-weight: bold;
+    color: rgb(190,190,190);
+}
+
+.l-menu-blog .right .nav li a:hover {
+    color: white;
 }
 
 
-/** MENU CV **/
+/** LAYOUT MENU CV **/
 
 .l-menu-cv {
     background-color: rgba(20, 20, 20, 0.9);
@@ -173,7 +178,7 @@ img.bg-img-texture {
     }
 }
 
-/** PAGES COMMUNES CV **/
+/** LAYOUT PAGES COMMUNES CV **/
 
 .l-page-cv {
     overflow: auto;
@@ -189,7 +194,7 @@ img.bg-img-texture {
     padding: 25px;
 }
 
-/** INTRO CV **/
+/** LAYOUT INTRO CV **/
 
 .l-intro {
 }
@@ -200,7 +205,7 @@ img.bg-img-texture {
 .l-intro-content {
 }
 
-/** REALISATIONS CV **/
+/** LAYOUT REALISATIONS CV **/
 
 .l-projets {
 }
@@ -211,7 +216,7 @@ img.bg-img-texture {
 .l-realisations-content {
 }
 
-/** EXPERIENCES CV **/
+/** LAYOUT EXPERIENCES CV **/
 
 .l-experiences-title {
 }
@@ -221,7 +226,7 @@ img.bg-img-texture {
 }
 
 
-/** COMPETENCES CV **/
+/** LAYOUT COMPETENCES CV **/
 
 .l-competences-title {
 }
@@ -230,14 +235,14 @@ img.bg-img-texture {
     padding-top: 40px;
 }
 
-/** FOOTER CV **/
+/** LAYOUT FOOTER CV **/
 
 .l-footer-cv {
     text-align: center;
     padding-top: 20px;
 }
 
-/** LOGIN **/
+/** LAYOUT LOGIN **/
 
 .login {
     margin-top: 80px;
@@ -262,7 +267,7 @@ img.bg-img-texture {
     text-align: center;
 }
 
-/** CONTACT **/
+/** LAYOUT CONTACT **/
 
 .l-contact-title {}
 
@@ -286,7 +291,7 @@ img.bg-img-texture {
 }
 
 
-/** INDEX BLOG **/
+/** LAYOUT INDEX BLOG **/
 
 .l-posts-content {
     margin-top: 70px;
@@ -301,6 +306,15 @@ img.bg-img-texture {
     margin-top: 50px;
 }
 
+/** LAYOUT POST BLOG **/
+
+.l-post-content {
+    margin-top: 50px;
+    padding: 50px;
+}
+
+
+
 
 /*--------------------------------*\
     Module    (Le Style)
@@ -310,7 +324,7 @@ img.bg-img-texture {
     background: #222D32;
 }
 
-/** INDEX CV **/
+/** STYLE INDEX CV **/
 
 .cv {
     font-family: 'Poppins', sans-serif;
@@ -338,7 +352,7 @@ img.bg-img-texture {
     background: rgba(100, 100, 100, 0.5);
 }
 
-/** INDEX BLOG **/
+/** STYLE INDEX BLOG **/
 
 .blog {
     font-family: 'Poppins', sans-serif;
@@ -348,6 +362,9 @@ img.bg-img-texture {
     color: white;
     font-size: 50px;
     text-align: center;
+    background-color: rgba(20,20,20,0.6);
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 
 .posts-content .post {
@@ -375,17 +392,41 @@ img.bg-img-texture {
     top: 5px;
 }
 
+/** STYLE POST BLOG **/
 
-/** MENU BLOG **/
+.post-content {
+    background-color: white;
+}
+
+.post-title {
+    font-size: 35px;
+    font-weight: bold;
+}
+
+.post-content {
+    margin-top: 40px;
+}
+
+.post-date {
+    color: grey;
+    font-size: 13px;
+}
+
+.img-clock {
+    margin-right: 5px;
+}
 
 
-/** MENU CV **/
+/** STYLE MENU BLOG **/
+
+
+/** STYLE MENU CV **/
 
 .l-h1-menu {
     font-size: 21px;
 }
 
-/** PAGES COMMUNES CV **/
+/** STYLE PAGES COMMUNES CV **/
 
 .page-cv-title {
     color: white;
@@ -396,7 +437,7 @@ img.bg-img-texture {
     background: rgba(20, 20, 20, 0.7);
 }
 
-/** INTRO CV **/
+/** STYLE INTRO CV **/
 
 .intro-title {
 }
@@ -407,7 +448,7 @@ img.bg-img-texture {
     text-align: justify;
 }
 
-/** REALISATIONS CV **/
+/** STYLE REALISATIONS CV **/
 
 .realisations-title {
 }
@@ -492,7 +533,7 @@ img.bg-img-texture {
     font-weight: 300;
 }
 
-/** EXPERIENCES CV **/
+/** STYLE EXPERIENCES CV **/
 
 .experiences-title {
 
@@ -541,7 +582,7 @@ span.hr {
 .exp-date {
 }
 
-/** COMPETENCES CV **/
+/** STYLE COMPETENCES CV **/
 
 .competences-title{}
 
@@ -564,7 +605,7 @@ span.hr {
     transform: scale(1.1);
 }
 
-/** FORMATIONS CV **/
+/** STYLE FORMATIONS CV **/
 .formations-title {}
 
 .formations-content {
@@ -627,14 +668,14 @@ span.hr {
     font-style: italic;
 }
 
-/** FOOTER CV **/
+/** STYLE FOOTER CV **/
 
 .footer-cv {
     color: white;
 }
 
 
-/** LOGIN **/
+/** STYLE LOGIN **/
 
 .login {
     color: white;
@@ -644,7 +685,7 @@ span.hr {
     margin-bottom: 30px;
 }
 
-/** ADMIN **/
+/** STYLE ADMIN **/
 
 .navbar-static-top {
     max-height: 50px;
@@ -681,8 +722,7 @@ span.hr {
     float: left;
 }
 
-/** CONTACT **/
-
+/** STYLE CONTACT **/
 
 .flash-contact {
     text-align: center;
@@ -693,8 +733,48 @@ span.hr {
     color: white;
 }
 
+/** STYLE PAGINATION **/
 
 
+.pagination-div {
+    margin-top: 50px;
+    margin-left: 15px;
+}
+
+.pagination {
+/*
+    width: 40%;
+    margin-left: auto;
+    margin-right: auto;
+    */
+}
+
+.pagination li {
+    width: 45px;
+    height: 45px;
+    line-height: 45px;
+    background-color: rgba(20,20,20,0.8);
+    text-align: center;
+}
+
+.pagination li.active {
+    background-color: rgb(90, 90, 90);
+}
+
+.pagination li a {
+    color: white;
+    display: inline-block;
+    width: 45px;
+}
+
+.pagination li a:hover{
+    text-decoration: none;
+}
+
+.pagination li:hover {
+    background-color: black;
+    cursor: pointer;
+}
 
 /*--------------------------------*\
     State
@@ -703,8 +783,6 @@ span.hr {
 .is-active {
 
 }
-
-
 
 .label-hide {
     display: none;
