--- a/app/Resources/SonataAdminBundle/views/standard_layout.html.twig
+++ b/app/Resources/SonataAdminBundle/views/standard_layout.html.twig
@@ -194,12 +194,16 @@ file that was distributed with this source code.
 
                     {% block sonata_top_nav_menu %}
                         <div class="navbar-custom-menu">
-                            <div class="vr-link"></div>
+                            <div class="vr-link vr-link-1"></div>
+                            <div class="vr-link vr-link-2"></div>
                             <div class="admin-menu-link">
                                 <a href="{{ path('cv_home') }}">CV</a>
                             </div>
                             <div class="admin-menu-link">
                                 <a href="{{ path('blog_home') }}">Blog</a>
+                            </div>
+                            <div class="admin-menu-link">
+                                <a href="{{ path('fos_user_security_logout') }}"><img width="35" src="{{ asset('assets/images/logout.png') }}" alt="logout"></a>
                             </div>
                         </div>
                     {% endblock %}
