--- a/src/BlogBundle/Resources/views/Blog/index.html.twig
+++ b/src/BlogBundle/Resources/views/Blog/index.html.twig
@@ -9,18 +9,23 @@
 
         <h2 class="col-md-10 offset-md-1 l-blog-title blog-title">BLOG - Guillaume HANOTEL</h2>
 
-        <div class="l-posts-content posts-content col-md-9">
-            {% for post in posts %}
-                <article class="post">
-                    <a class="post-preview-title" href="{{ path('blog_post', {'id' : post.id}) }}">{{ post.title }}</a>
-                    <p class="post-preview-date">
-                        <img class="img-clock" src="{{ asset('assets/images/clock.png') }}" alt="image clock" width="13">{{ post.date|localizeddate('long', 'none', 'fr_FR') }}
-                    </p>
-                    <span class="hr"></span>
-                    <p class="post-preview-content">{{ post.content|truncate(200, true) }}</p>
-                </article>
-            {% endfor %}
-        </div>
+        {% if posts is not empty %}
+            <div class="l-posts-content posts-content col-md-9">
+                {% for post in posts %}
+                    <article class="post">
+                        <a class="post-preview-title" href="{{ path('blog_post', {'id' : post.id}) }}">{{ post.title }}</a>
+                        <p class="post-preview-date">
+                            <img class="img-clock" src="{{ asset('assets/images/clock.png') }}" alt="image clock" width="13">{{ post.date|localizeddate('long', 'none', 'fr_FR') }}
+                        </p>
+                        <span class="hr"></span>
+                        <p class="post-preview-content">{{ post.content|truncate(200, true) }}</p>
+                    </article>
+                {% endfor %}
+            </div>
+
+        {% else %}
+            <p>Aucun article</p>
+        {% endif %}
 
         <div class="pagination-div">
             {{ include("BlogBundle:Blog:pagination.html.twig") }}
