--- a/src/BlogBundle/Resources/views/Blog/post.html.twig
+++ b/src/BlogBundle/Resources/views/Blog/post.html.twig
@@ -5,27 +5,81 @@
 
     {{ include("BlogBundle:Blog:menu.html.twig") }}
 
+    <div class="flash-contact">
+        {% for label, messages in app.flashes %}
+            {% for message in messages %}
+                <div class="alert alert-{{ label }}">
+                    {{ message }}
+                </div>
+            {% endfor %}
+        {% endfor %}
+    </div>
+
     <div id="post" class="main l-page-blog l-post post container">
 
         <h2 class="col-md-10 offset-md-1 l-blog-title blog-title">BLOG - Guillaume HANOTEL</h2>
 
         <article class="l-post-content post-content col-md-9">
             <h3 class="post-title">{{ post.title }}</h3>
-            <p class="post-date"><img class="img-clock" src="{{ asset('assets/images/clock.png') }}" alt="image clock" width="13">{{ post.date|localizeddate('long', 'none', 'fr_FR') }}</p>
+            <p class="post-date">
+                <img class="img-clock" src="{{ asset('assets/images/clock.png') }}" alt="image clock" width="13">{{ post.date|localizeddate('long', 'none', 'fr_FR') }}
+            </p>
             <span class="hr"></span>
             <p class="post-content">{{ post.content|nl2br }}</p>
+
+            <div>
+                <p>signature</p>
+            </div>
         </article>
 
-        <div id="l-comments-content post-comments">
-            {% for comment in comments %}
-                {{ comment.content }}
-                {{ comment.date|date('d/m/y H:i') }}
-                {{ comment.user.firstname }}
-                <br>
-            {% endfor %}
+
+        <div class="l-post-comments post-comments col-md-9">
+
+            {% if comments is not empty %}
+                <div class="l-comments-content comments-content">
+                    {% for comment in comments %}
+                        <div class="l-comment comment">
+                            <p>
+                                <span class="comment-name">{{ comment.name }}</span>
+                                <span class="comment-date">{{ comment.date|localizeddate('long', 'none', 'fr_FR') }}</span>
+                            </p>
+                            <p class="comment-content">
+                                {{ comment.content }}
+                            </p>
+                        </div>
+                    {% endfor %}
+                </div>
+            {% endif %}
+
+
+            <h4 class="form-comment-title">Laisser un commentaire</h4>
+
+            <div class="form-comment offset-md-2">
+                {{ form_start(comment_form) }}
+
+                {% if not app.user %}
+                    <div class="form-comment-name form-group">
+                        {{ form_widget(comment_form.name) }}
+                    </div>
+                {% endif %}
+
+                <div class="form-group">
+                    {{ form_widget(comment_form.content) }}
+                </div>
+
+                <div class="form-group submit-form col-sm-6 offset-sm-1">
+                    <input type="submit" value="Envoyer">
+                </div>
+
+                {{ form_end(comment_form, {'render_rest': false }) }}
+
+            </div>
+
+
         </div>
 
     </div>
+
 
 
 
