signature post + avatar + fixtures

--- a/app/Resources/SonataAdminBundle/views/standard_layout.html.twig
+++ b/app/Resources/SonataAdminBundle/views/standard_layout.html.twig
@@ -117,6 +117,8 @@ file that was distributed with this source code.
             {% endif %}
         {% endblock %}
     </title>
+    <link rel="icon" type="image/png" href="{{ asset('assets/images/GH_32x32.png') }}">
+
 </head>
 <body {% block body_attributes %}class="sonata-bc skin-black fixed"{% endblock %}>
 
