--- a/src/BlogBundle/Resources/views/Blog/index.html.twig
+++ b/src/BlogBundle/Resources/views/Blog/index.html.twig
@@ -24,7 +24,7 @@
             </div>
 
         {% else %}
-            <p>Aucun article</p>
+            <p class="text-white">Aucun article</p>
         {% endif %}
 
         <div class="pagination-div">
