--- a/src/CVBundle/Resources/views/CV/competences.html.twig
+++ b/src/CVBundle/Resources/views/CV/competences.html.twig
@@ -11,16 +11,20 @@
 
         <div class="row l-competences-content competences-content l-page-cv-content page-cv-content">
 
-            {% for competence in competences %}
-                <div class="competence col-sm-6 col-md-4 col-lg-3">
-                    <img src="{{ asset(competence.image) }}" alt="img" width="150">
-                    <p>{{ competence.intitule }}</p>
-                </div>
-            {% endfor %}
+            {% if competences is not empty %}
+
+                {% for competence in competences %}
+                    <div class="competence col-sm-6 col-md-4 col-lg-3">
+                        <img src="{{ asset(competence.image) }}" alt="img" width="150">
+                        <p>{{ competence.intitule }}</p>
+                    </div>
+                {% endfor %}
+
+            {% else %}
+                <p class="text-white">[Aucun Contenu pour le moment]</p>
+            {% endif %}
 
         </div>
-
     </div>
-
 
 {% endblock %}
