--- a/src/CVBundle/Resources/views/CV/projets.html.twig
+++ b/src/CVBundle/Resources/views/CV/projets.html.twig
@@ -16,7 +16,7 @@
                 {% for realisation in realisations %}
                     <div class="realisation col-sm-12 col-md-6 col-lg-4">
                         <div class="realisation-content">
-                            <img src="{{ asset(realisation.image) }}" height="200" width="200" alt="img realisation">
+                            <img src="{{ asset(realisation.imagePath) }}" height="200" width="200" alt="img realisation">
                             <a href="{{ realisation.link }}" target="_blank">
                                 <div class="realisation-back">
                                     <div class="realisation-back-screen"></div>
