--- a/src/CVBundle/Resources/views/CV/competences.html.twig
+++ b/src/CVBundle/Resources/views/CV/competences.html.twig
@@ -15,7 +15,7 @@
 
                 {% for competence in competences %}
                     <div class="competence col-sm-6 col-md-4 col-lg-3">
-                        <img src="{{ asset(competence.image) }}" alt="img" width="150">
+                        <img src="{{ asset(competence.imagePath) }}" alt="img" width="150">
                         <p>{{ competence.intitule }}</p>
                     </div>
                 {% endfor %}
