--- a/src/CVBundle/Resources/views/CV/contact.html.twig
+++ b/src/CVBundle/Resources/views/CV/contact.html.twig
@@ -21,6 +21,15 @@
 
         <div class="col-lg-8 offset-lg-2 l-contact-content contact-content l-page-cv-content page-cv-content">
 
+            <div class="contact-social-medias col-md-6 offset-md-3 col-sm-8 offset-sm-2">
+
+
+                <a target="_blank" href="https://github.com/guillaumehanotel"><img width="20" src="{{ asset('assets/images/github-logo_white.png') }}" alt="logo github"></a>
+                <a target="_blank" href="https://www.linkedin.com/in/guillaume-hanotel-538b81106/"><img width="20" src="{{ asset('assets/images/linkedin-logo_white.png') }}" alt="logo linkedin"></a>
+                <a target="_blank" href="https://twitter.com/GHanosql"><img width="20" src="{{ asset('assets/images/twitter-logo_white.png') }}" alt="logo twitter"></a>
+                <a target="_blank" href="https://www.facebook.com/guillaume.hanotel"><img width="22" src="{{ asset('assets/images/facebook-logo_white.png') }}" alt="logo facebook"></a>
+            </div>
+
             <div class="col-md-8 offset-md-2">
                 {{ form_start(form) }}
 
