--- a/src/BlogBundle/Resources/views/Blog/post.html.twig
+++ b/src/BlogBundle/Resources/views/Blog/post.html.twig
@@ -19,38 +19,44 @@
 
         <h2 class="col-md-10 offset-md-1 l-blog-title blog-title">BLOG - Guillaume HANOTEL</h2>
 
-        <article class="l-post-content post-content col-md-9">
-            <h3 class="post-title">{{ post.title }}</h3>
-            <p class="post-date">
-                <img class="img-clock" src="{{ asset('assets/images/clock.png') }}" alt="image clock" width="13">{{ post.date|localizeddate('long', 'none', 'fr_FR') }}
-            </p>
-            <span class="hr"></span>
-            <p class="post-content">{{ post.content|nl2br }}</p>
+        <div class="row">
 
-            <span class="hr"></span>
+            <article class="l-post-content post-content col-md-9">
+                <h3 class="post-title">{{ post.title }}</h3>
+                <p class="post-date">
+                    <img class="img-clock" src="{{ asset('assets/images/clock.png') }}" alt="image clock" width="13">{{ post.date|localizeddate('long', 'none', 'fr_FR') }}
+                </p>
+                <span class="hr"></span>
+                <p class="post-content">{{ post.content|nl2br }}</p>
 
-            <div class="post-signature">
+                <span class="hr"></span>
 
-                <div class="signature-img">
-                    <img width="80" src="{{ asset(post.user.imagePath) }}" alt="">
+                <div class="post-signature">
+
+                    <div class="signature-img">
+                        <img width="80" src="{{ asset(post.user.imagePath) }}" alt="">
+                    </div>
+
+                    <div class="signature-content">
+                        <p class="signature-nom">{{ post.user.firstname ~ ' ' ~ post.user.lastname }}</p>
+                        <p class="social-medias">
+                            <a target="_blank" href="https://github.com/guillaumehanotel"><img width="20" src="{{ asset('assets/images/github-logo.png') }}" alt="logo github"></a>
+                            <a target="_blank" href="https://www.linkedin.com/in/guillaume-hanotel-538b81106/"><img width="20" src="{{ asset('assets/images/linkedin-logo.png') }}" alt="logo linkedin"></a>
+                            <a target="_blank" href="https://twitter.com/GHanosql"><img width="20" src="{{ asset('assets/images/twitter-logo.png') }}" alt="logo twitter"></a>
+                            <a target="_blank" href="https://www.facebook.com/guillaume.hanotel"><img width="22" src="{{ asset('assets/images/facebook-logo.png') }}" alt="logo facebook"></a>
+                        </p>
+                        <p class="signature-titre">{{ intro_titre|title }}</p>
+                    </div>
+
                 </div>
 
-                <div class="signature-content">
-                    <p class="signature-nom">{{ post.user.firstname ~ ' ' ~ post.user.lastname }}</p>
-                    <p class="social-medias">
-                        <a target="_blank" href="https://github.com/guillaumehanotel"><img width="20" src="{{ asset('assets/images/github-logo.png') }}" alt="logo github"></a>
-                        <a target="_blank" href="https://www.linkedin.com/in/guillaume-hanotel-538b81106/"><img width="20" src="{{ asset('assets/images/linkedin-logo.png') }}" alt="logo linkedin"></a>
-                        <a target="_blank" href="https://twitter.com/GHanosql"><img width="20" src="{{ asset('assets/images/twitter-logo.png') }}" alt="logo twitter"></a>
-                        <a target="_blank" href="https://www.facebook.com/guillaume.hanotel"><img width="22" src="{{ asset('assets/images/facebook-logo.png') }}" alt="logo facebook"></a>
-                    </p>
-                    <p class="signature-titre">{{ intro_titre|title }}</p>
-                </div>
+            </article>
 
-
+            <div class="l-last-posts last-posts col-md-3">
+                {{ render(controller("BlogBundle:Blog:lastPost")) }}
             </div>
 
-        </article>
-
+        </div>
 
         <div class="l-post-comments post-comments col-md-9">
 
