reload fixture + migrations + improve makefile

--- a/src/CVBundle/Resources/views/CV/formations.html.twig
+++ b/src/CVBundle/Resources/views/CV/formations.html.twig
@@ -21,7 +21,7 @@
                         </div>
 
                         <div class="formation-content col-md-9">
-                            <a class="formation-intitule" href="{{ formation.lien }}" target="_blank">{{ formation.intitule }} {{ formation.anneeCourante }} année</a>
+                            <a class="formation-intitule" href="{{ formation.lien }}" target="_blank">{{ formation.anneeCourante }} année {{ formation.intitule }}</a>
                             <p class="formation-lieu">{{ formation.ecole }} -
                                 <span class="formation-ville">{{ formation.ville }} ({{ formation.codepostal }})</span>
                             </p>
