--- a/src/BlogBundle/Resources/views/Blog/post.html.twig
+++ b/src/BlogBundle/Resources/views/Blog/post.html.twig
@@ -24,7 +24,7 @@
             <article class="l-post-content post-content col-md-9">
                 <h3 class="post-title">{{ post.title }}</h3>
                 <p class="post-date">
-                    <img class="img-clock" src="{{ asset('assets/images/clock.png') }}" alt="image clock" width="13">{{ post.date|localizeddate('long', 'none', 'fr_FR') }}
+                    <img class="img-clock" src="{{ asset('assets/images/clock.png') }}" alt="image clock" width="13">{{ post.date|date('d M Y') }}
                 </p>
                 <span class="hr"></span>
                 <p class="post-content">{{ post.content|nl2br }}</p>
