--- a/src/CVBundle/Resources/views/CV/experiences.html.twig
+++ b/src/CVBundle/Resources/views/CV/experiences.html.twig
@@ -23,8 +23,8 @@
                         <p class="exp-type_date">{{ experience.type }}
                             {{ date_diff(experience.dateDebut, experience.dateFin) }} -
                             <span class="exp-date">
-                            {{ experience.dateDebut|localizeddate('long', 'none', 'fr_FR') }} au
-                                {{ experience.dateFin|localizeddate('long', 'none', 'fr_FR') }}
+                            {{ experience.dateDebut|date('d M Y') }} au
+                                {{ experience.dateFin|date('d M Y') }}
                         </span>
 
                         </p>
